# embeh

./: CMakeLists.txt  README.md  embeh.cpp
embeh/: template_avail_block.hpp  type_pool_storage.hpp
embeh/overrides/: operator_new.hpp
include/: template_avail_block.hpp
include/lefticus/: static_test.hpp
test/: CMakeLists.txt  main.cpp
